[tool.poetry]
name = "langchainmyreact"
version = "0.0.1"
description = "LangChain ReAct implementation"
authors = ["masashimorita"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.14"
langchain-openai = "^0.3.0"
black = "^24.10.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"